# kfc

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
notebooks/: F-step.ipynb
src/kfc_model/: __init__.py  base.py  bregman.py  classifier.py  combiner.py  divergence.py  local_model.py  model.py  regressor.py  typing.py
src/kfc_model/examples/: example_usage.py  example_usage_model.py  example_usage_with_bregman_kmeans.py
src/kfc_model/utils/: validation_utilities.py  validation_utilities_empty.py
